--- a/tsconfig.json
+++ b/tsconfig.json
@@ -6,14 +6,14 @@
     "experimentalDecorators": true,
     "emitDecoratorMetadata": true,
     "outDir":"./dist",
-    "declaration": true,
-    "declarationDir":"./dist/types",
-    "noUnusedParameters":false
+    // "declaration": true,
+    // "declarationDir":"./dist/types",
+    // "noUnusedParameters":false
   },
   "include":[
     "**/*.ts"
   ],
   "exclude": [
-    "./index.ts"
+    
   ]
 }
